<resources>
    <string name="app_name" translatable="false">ÀGORA</string>
    <string name="title_activity_login" translatable="false">Sign in</string>
    <string name="bienvenida">BIENVENIDO/A a ÀGORA</string>
    <string name="hint_username" translatable="false">Username</string>
    <string name="hint_password">Contraseña</string>
    <string name="login">Entrar</string>
    <string name="pre_registre">¿No estas registrado?</string>
    <string name="SignIn">Regístrate</string>
    <string name="error">Usuario o password incorrectos</string>
    <string name="error2">Usuario y password necesarios</string>
    <string name="registration">Registro del Usuario</string>
    <string name="action_Registration">Registrarse</string>
    <string name="prompt_NewPassword">Contraseña</string>
    <string name="prompt_repeatPassword">Repetir Contraseña</string>
    <string name="prompt_choseUsername" translatable="false">Username</string>
    <string name="prompt_identification">Codigo de Registro</string>
    <string name="errorreg">ID not valid or username already taken</string>
    <string name="samepass">Passwords must be the same</string>
    <string name="errorid">Code needed</string>
    <string name="erroruser">User needed</string>
    <string name="errorpw">Passw needed</string>
    <string name="Registrat">Usuario %1$s registrado correctamente</string>
    <string name="fieldnecesary">Campo Necesario</string>
    <string name="passwodsiguals">Passwords no coinciden</string>
    <string name="username" translatable="false">"Username"</string>
    <string name="home">Home</string>
    <string name="novaproposta">Nova Proposta</string>
    <string name="lesmevespropostes">Les Meves Propostes</string>
    <string name="favorites">Favorites</string>
    <string name="miperfil">About me</string>
    <string name="perfil">My Profile</string>
    <string name="editarp">Edit Profile</string>
    <string name="serchuser">Search User</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="logros">Logros</string>
    <string name="surt">Sortir</string>
    <string name="tria_idioma">Seleccionar Idioma</string>
    <string name="Castella" translatable="false">Castellano</string>
    <string name="Catalan" translatable="false">Català</string>
    <string name="Ingles" translatable="false">English</string>
    <string name="idioma">Canviar Idioma</string>
    <string name="search">Search</string>
    <string name="title_activity_main">Main Page</string>
    <string name="creadopor">"Creado por "</string>
    <string name="mesinfo">VER MAS</string>
    <string name="filtro">Filter by:</string>
    <string name="buscar">Find:</string>
    <string name="tot">Tot</string>
    <string name="user">Per Usuari</string>
    <string name="categ">Per Categories</string>
    <string name="errorTitulo">Campo titulo necesario</string>
    <string name="errorDescripcion">Campo Descripcion necesario</string>
    <string name="errorCreacion">Creacion incorrecta</string>
    <string name="errorPosition">Please select a position in your neighbourhood!</string>
    <string name="titulo">Titulo</string>
    <string name="descrpicion">Descripcion</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="create">Create</string>
    <string name="done">Propuesta "%1$s" creada correctamnete</string>
    <string name="addPosition">Add position</string>
    <string name="savePosition">Save position</string>
    <string name="deletePosition">Delete position</string>
    <string name="posAttached">Position attached</string>
    <string name="nuevapropuesta">Nueva Propuesta</string>
    <string name="spinnerhint">Seleccionar una Categoria...</string>
    <string name="numeroimatge" translatable="false">%1$s imatges</string>
    <string name="editTitle">Title</string>
    <string name="editDescription">Description</string>
    <string name="saveButton">Save</string>
    <string name="cancelButton">Cancel</string>
    <string name="savedChanges">Saved changes to proposal</string>
    <string name="errorEdit">Error editing proposal</string>
    <string name="editar">Editar</string>
    <string name="editPosition">Edit Position</string>
    <string name="importante">Importante</string>
    <string name="seguro">¿ Esta seguro de eliminar esta propuesta ?</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Borrado">Propuesta %1$s borrada</string>
    <string name="delete">Borrar</string>
    <string name="nomusuario2">Nom Usuario:</string>
    <string name="codigopostal2">Codigo Postal:</string>
    <string name="barrio2">Barrio:</string>
    <string name="fnaix2">Fecha Nacimiento:</string>
    <string name="sexo2">Sexo:</string>
    <string name="descripcion2">Descripcion:</string>
    <string name="verpropuestas">Ver propuestas</string>
    <string name="creadoel">Creada el %1$s</string>
    <string name="propcreadapor">Propuestas de: %1$s</string>
    <string name="dia">el: %1$s</string>
    <string name="determinant">el</string>
    <string name="nou">Nuevo Comentario</string>
    <string name="mensajenc">Introducir el nuevo comentario para la propuesta %1$s</string>
    <string name="añadir">añadir</string>
    <string name="showPosition">Show Position</string>
    <string name="mensajeliminar">¿Está seguro que desea eliminar el comentario "%1$s"?</string>
    <string name="mensajeditar">Realiza los cambios pertinentes en el comentario</string>
    <string name="elimiarcomentario">Eliminar Comentario</string>
    <string name="editarcomentario">Editar Comentario</string>
    <string name="categoriadetails">Categoria:</string>
    <string name="Ownerdetails">Owner:</string>
    <string name="createddetails">Creada el:</string>
    <string name="descriptiondetails">Descripcio:</string>
    <string name="M">Hombre</string>
    <string name="F">Mujer</string>
    <string name="I">Indefinido</string>
    <string name="cps">Cambiar Password</string>
    <string name="nomusuario">Nom Usuario</string>
    <string name="codigopostal">Codigo Postal</string>
    <string name="barrio">Barrio</string>
    <string name="fnaix">Fecha Nacimiento</string>
    <string name="sexo">Sexo</string>
    <string name="pwactual">Password Actual</string>
    <string name="pwnueva">Password Nueva</string>
    <string name="pwnueva2">Confirmar password</string>
    <string name="categoria">Categoria</string>
    <string name="cultura">Cultura</string>
    <string name="deportes">Deportes</string>
    <string name="ocio">Ocio</string>
    <string name="mantenimiento">Mantenimiento</string>
    <string name="eventos">Eventos</string>
    <string name="turismo">Turismo</string>
    <string name="quejas">Quejas</string>
    <string name="soporte">soporte</string>
    <string name="todo">Todas</string>
    <string name="mensajecompartir">Mira que propuesta he encontrado en Agora!</string>
    <string name="cargandoprop">CARGANDO PROPUESTAS...</string>
    <string name="cargandoperfil">CARGANDO PERFIL...</string>
    <string name="cargandocomentarios">CARGANDO COMENTARIOS...</string>
    <string name="start">Empezar</string>
    <string name="completarperfil">Completa tu perfil</string>
    <string name="cambio_imagen">Change Image</string>
    <string name="spinnerhintsexo">Selecciona un sexo</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="indefinido">Indefinido</string>
    <string name="nuevapasswordmal">Nueva Password incorrecta</string>
    <string name="passwordokk">Password actualizado correctamente</string>
    <string name="diferente">El nuevo Password tiene que ser diferente</string>
    <string name="incorrecta">Password Incorrecta</string>
    <string name="Galeria">Galeria</string>
    <string name="escojeropcion">Escoge una opción</string>
    <string name="appdeimagen">Selecciona app de imagen</string>
    <string name="nuevo">NUEVO LOGRO</string>
    <string name="conseguidos">Logros Conseguidos</string>
    <string name="pendientes">Logros Pendientes</string>
    <string name="pendiente">" (pendiente)"</string>
    <string name="conseguido">" (conseguido)"</string>
    <string name="PROP1">Crea 1 propuesta</string>
    <string name="PROP5">Crea 5 propuestas</string>
    <string name="PROP10">Crea 10 propuestas</string>
    <string name="PROP50">Crea 50 propuestas</string>
    <string name="PROP100">Crea 100 propuestas</string>
    <string name="FAV1">Añadir 1 propuesta a favoritos</string>
    <string name="FAV10">Añadir 10 propuestas a favoritos</string>
    <string name="UBI1">Crear 1 propuesta con ubicación</string>
    <string name="UBI10">Crear 10 propuestas con ubicación</string>
    <string name="PROPC">Crear una propuesta de la categoria Cultura</string>
    <string name="PROPD">Crear una propuesta de la categoria Deportes</string>
    <string name="PROPO">Crear una propuesta de la categoria Ocio</string>
    <string name="PROPM">Crear una propuesta de la categoria Mantenimiento</string>
    <string name="PROPE">Crear una propuesta de la categoria Eventos</string>
    <string name="PROPT">Crear una propuesta de la categoria Turismo</string>
    <string name="PROPQ">Crear una propuesta de la categoria Quejas</string>
    <string name="PROPS">Crear una propuesta de la categoria Soporte</string>
    <string name="TWIT1">Compartir 1 propuesta en Twitter</string>
    <string name="TWIT10">Compartir 10 propuestas en Twitter</string>
    <string name="TWIT100">Compartir 100 propuestas en Twitter</string>
    <string name="GLIKE1">Conseguir 1 like en 1 propuesta</string>
    <string name="GLIKE10">Conseguir 10 likes en 1 propuesta</string>
    <string name="GLIKE100">Conseguir 100 likes en 1 propuesta</string>
    <string name="PLIKE1">Dar like a 1 propuesta</string>
    <string name="PLIKE10">Dar like a 10 propuestas</string>
    <string name="PLIKE100">Dar like a 100 propuestas</string>
    <string name="COM1">Comentar 1 propuesta</string>
    <string name="COM5">Comentar 5 propuestas</string>
    <string name="COM25">Comentar 25 propuestas</string>
    <string name="COM100">Comentar 100 propuestas</string>
    <string name="GCOM1">Tener 1 comentario en 1 propuesta</string>
    <string name="GCOM10">Tener 10 comentario en 1 propuesta</string>
    <string name="GCOM100">Tener 100 comentario en 1 propuesta</string>
    <string name="str_en" translatable="false">English</string>
    <string name="str_es" translatable="false">Spanish</string>
    <string name="str_ca" translatable="false">Catalan</string>
    <string-array name="languages">
        <item>@string/str_en</item>
        <item>@string/str_es</item>
        <item>@string/str_ca</item>
    </string-array>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_my_propuestas">MyPropuestasActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_edit_proposal">EditProposalActivity</string>
    <string name="title_activity_details_proposal" translatable="false">DetailsProposalActivity
    </string>
    <string name="title_activity_add_location" translatable="false">Map</string>
    <string name="about_version">Version 1.0</string>
    <string name="about_names" translatable="false">Pau Alós, Carlota Catot, Gerard Esteve,</string>
    <string name="about_names2" translatable="false">Dragos Fotescu, Oriol Saborido i Kerstin Winter</string>
    <string name="about_assignatura">Projecte d\'Engenyieria del Software - FIB</string>
    <string name="about_quadrimestre" translatable="false">- 2017/2018 -</string>
</resources>