<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_myporposals"
            android:icon="@mipmap/ic_account"
            android:title="@string/lesmevespropostes"/>

        <item
            android:id="@+id/nav_perfilprinc"
            android:icon="@mipmap/ic_person"
            android:title="@string/perfil"/>

        <item
            android:id="@+id/nav_logros"
            android:title="@string/logros"/>

        <!-- <item
            android:id="@+id/nav_buscarusuarios"
            android:icon="@mipmap/ic_group"
            android:title="@string/serchuser"/> -->

        <!-- <item
            android:id="@+id/nav_help"
            android:icon="@mipmap/ic_help"
            android:title="@string/help"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/ic_info"
            android:title="@string/about"/> -->

        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/ic_exit"
            android:title="@string/surt"/>

    </group>

</menu>
