<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
   <!-- <item android:id="@+id/action_settings"
          android:orderInCategory="100"
          android:title="@string/action_settings"
          app:showAsAction="never"/> -->


    <item android:title="@string/idioma">
        <menu>



            <item
                android:id="@+id/men_castella"
                android:icon="@drawable/spa"
                android:title="@string/Castella"/>
            <item
                android:id="@+id/men_catala"
                android:icon="@drawable/rep"
                android:title="@string/Catalan"/>
            <item
                android:id="@+id/men_angles"
                android:icon="@drawable/ing"
                android:title="@string/Ingles"/>
        </menu>
    </item>
</menu>
