<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingTop="50dp"
              android:background="@color/fondo">
    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000"
        android:layout_marginBottom="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"/>

    <TextView
        android:text="@string/about_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000"
        android:textStyle="italic"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:paddingBottom="10dp"/>
    <TextView
        android:text="@string/about_names"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000"
        android:textAppearance="@style/TextAppearance.AppCompat"/>
    <TextView
        android:text="@string/about_names2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:paddingBottom="10dp"/>
    <TextView
        android:text="@string/about_assignatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:paddingBottom="10dp"/>
    <TextView
        android:text="@string/about_quadrimestre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000"
        android:textAppearance="@style/TextAppearance.AppCompat" />
</LinearLayout>