<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="#f2f1ef"
            android:fillViewport="false">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:orientation="vertical"
                  android:gravity="center_horizontal"
                  android:paddingBottom="@dimen/activity_vertical_margin"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingTop="@dimen/activity_vertical_margin"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:layout_marginBottom="5dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/titulo"/>

        <EditText
            android:id="@+id/editTitle"
            android:hint="@string/editTitle"
            android:inputType="text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColorHint="#e89b9696"
            android:padding="10dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="serif"
            android:background="@drawable/edittext_bg"
            android:textCursorDrawable="@null"
            android:textColor="#000"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:layout_marginBottom="5dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/descrpicion"/>

        <EditText
            android:id="@+id/editDescription"
            android:hint="@string/editDescription"
            android:inputType="textMultiLine"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColorHint="#e89b9696"
            android:padding="10dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="serif"
            android:background="@drawable/edittext_bg"
            android:textCursorDrawable="@null"
            android:textColor="#000"
            android:textStyle="italic"/>


        <LinearLayout android:layout_width="wrap_content"
                      android:layout_gravity="right"
                      android:layout_marginBottom="20dp"
                      android:layout_height="match_parent">

            <Button
                android:id="@+id/editPosButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Button" />

            <RelativeLayout android:layout_width="wrap_content"
                            android:layout_marginRight="10dp"
                            android:layout_height="wrap_content">

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:background="@drawable/botonok"
                    android:textColor="#FFF"
                    android:textStyle="bold"
                    android:textSize="17dp"
                    android:text="@string/saveButton" />

                <ProgressBar
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:id="@+id/saveprogressbar"
                    android:layout_centerInParent="true"
                    style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
                    android:indeterminateDrawable="@drawable/progress_bar_circular_style"
                    android:visibility="gone"/>

            </RelativeLayout>

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/botoncancel"
                android:fontFamily="serif"
                android:textStyle="bold"
                android:textSize="17dp"
                android:text="@string/cancelButton" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
