<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#f2f1ef"
            android:padding="10dp"
            android:fillViewport="false">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center_horizontal"
                  android:orientation="vertical"
                  android:paddingBottom="@dimen/activity_vertical_margin"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingTop="@dimen/activity_vertical_margin"
                  tools:context="edu.upc.pes.agora.Presentation.LoginActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/registration"
            android:textSize="30dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/blue"
            android:fontFamily="serif"/>

        <EditText
            android:id="@+id/identifier"
            android:hint="@string/prompt_identification"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColorHint="#e89b9696"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="serif"
            android:background="@drawable/edittext_bg"
            android:textCursorDrawable="@null"
            android:textColor="#000"
            android:textStyle="italic"/>


        <EditText
            android:hint="@string/prompt_choseUsername"
            android:id="@+id/username"
            android:inputType="textPersonName"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:textColorHint="#e89b9696"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="serif"
            android:background="@drawable/edittext_bg"
            android:textCursorDrawable="@null"
            android:textColor="#000"
            android:textStyle="italic"/>

        <EditText
            android:id="@+id/password1"
            android:hint="@string/prompt_NewPassword"
            android:inputType="textPassword"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:textColorHint="#e89b9696"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="serif"
            android:background="@drawable/edittext_bg"
            android:textCursorDrawable="@null"
            android:textColor="#000"
            android:textStyle="italic"/>

        <EditText
            android:id="@+id/password2"
            android:hint="@string/prompt_repeatPassword"
            android:inputType="textPassword"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:textColorHint="#e89b9696"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="serif"
            android:background="@drawable/edittext_bg"
            android:textCursorDrawable="@null"
            android:textColor="#000"
            android:textStyle="italic"/>

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <Button
                android:id="@+id/btnRegistration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/action_Registration"
                android:background="@drawable/botonlogin"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="18dp"
                android:clickable="true"
                android:onClick="onClick"
                android:visibility="visible"/>

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/loginprogressbar"
                android:layout_centerInParent="true"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
                android:indeterminateDrawable="@drawable/progress_bar_circular_style"
                android:visibility="gone"/>

        </RelativeLayout>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_marginTop="20dp" android:layout_weight="1"/>

    </LinearLayout>

</ScrollView>